# la.bat.ne.da

./: .env.example  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
beat_sync_func/: __init__.py  __main__.py
beat_sync_func/audio/: __init__.py  beat_detector.py  loader.py
beat_sync_func/core/: __init__.py  config.py  optimized_pipeline.py  pipeline.py  rendering_pipeline.py
beat_sync_func/cutter/: __init__.py  director.py
beat_sync_func/effects/: __init__.py  composer.py
beat_sync_func/hardware/: __init__.py  accelerator.py  benchmark.py  cli.py  detector.py  optimizer.py
beat_sync_func/rendering/: __init__.py  advanced_effects.py  cli.py  compositor.py  ffmpeg_wrapper.py
beat_sync_func/utils/: logging.py
beat_sync_func/video/: __init__.py  analyzer.py  loader.py
config/: default.yaml
docs/: ARCHITECTURE.md
examples/: basic_sync.py
src/: __init__.py
src/beat_sync/: __init__.py  audio_analyzer.py  beat_detector.py
src/clip_selector/: __init__.py  selector.py
src/core/: __init__.py  pipeline.py  project.py
src/export/: __init__.py  csv_exporter.py  json_exporter.py
src/timeline_generator/: __init__.py  generator.py
src/utils/: __init__.py  config.py  logger.py
src/visual_analysis/: __init__.py  clip_analyzer.py
tests/: __init__.py  conftest.py
tests/unit/: test_config.py  test_hardware.py  test_rendering.py
