[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "beat-sync-func"
version = "0.1.0"
description = "AI-powered music video creator with beat synchronization"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "laaaberned", email = ""}
]
keywords = ["music", "video", "ai", "beat-sync", "editing"]

[project.urls]
Repository = "https://github.com/laaaberned/la.bat.ne.da"
Issues = "https://github.com/laaaberned/la.bat.ne.da/issues"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false